--- a/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/CSVDownloaderView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/CSVDownloaderView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Last.fm_Scrubbler_WPF.Views.CSVDownloaderView"
+﻿<UserControl x:Class="Last.fm_Scrubbler_WPF.Views.ExtraFunctions.CSVDownloaderView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
