--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerScrobbleControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerScrobbleControl.xaml
@@ -7,6 +7,7 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="700">
+
   <UserControl.Resources>
     <BitmapImage x:Key="noalbumimage" UriSource="/Resources/noalbumimage.png"/>
   </UserControl.Resources>
@@ -103,12 +104,7 @@
         <Image Width="150" Height="150">
           <Image.Style>
             <Style TargetType="{x:Type Image}">
-              <Setter Property="Source" Value="{Binding CurrentAlbumArtwork}"/>
-              <Style.Triggers>
-                <DataTrigger Binding="{Binding CurrentAlbumArtwork}" Value="{x:Null}">
-                  <Setter Property="Source" Value="{StaticResource noalbumimage}"/>
-                </DataTrigger>
-              </Style.Triggers>
+              <Setter Property="Source" Value="{Binding CurrentAlbumArtwork, TargetNullValue={StaticResource noalbumimage}}"/>
             </Style>
           </Image.Style>
         </Image>
