--- a/Last.fm-Scrubbler-WPF/Views/SubViews/ConfigureCSVParserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/SubViews/ConfigureCSVParserView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Last.fm_Scrubbler_WPF.Views.ScrobbleViews.ConfigureCSVParserView"
+﻿<Window x:Class="Last.fm_Scrubbler_WPF.Views.SubViews.ConfigureCSVParserView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
