--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ScrobbleButtonControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ScrobbleButtonControl.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
-             d:DesignHeight="25" d:DesignWidth="300">
+             d:DesignHeight="25" d:DesignWidth="300" cal:Bind.Model="{Binding}">
 
   <Grid>
     <Grid.ColumnDefinitions>
@@ -15,19 +14,8 @@
       <ColumnDefinition Width="75"/>
     </Grid.ColumnDefinitions>
 
-    <Button Grid.Column="0" Content="Scrobble" IsEnabled="{Binding CanScrobble}">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="Scrobble"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
-    <Button Grid.Column="2" Content="Preview" IsEnabled="{Binding CanPreview}">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="Preview"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
+    <Button x:Name="Scrobble" Grid.Column="0" Content="Scrobble" IsEnabled="{Binding CanScrobble}"/>
+    <Button x:Name="Preview" Grid.Column="2" Content="Preview" IsEnabled="{Binding CanPreview}">
       <Button.ToolTip>
         <ToolTip>Preview the tracks that will be scrobbled.</ToolTip>
       </Button.ToolTip>
