--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ScrobblePreviewView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ScrobblePreviewView.xaml
@@ -1,10 +1,8 @@
-﻿<Window x:Class="Last.fm_Scrubbler_WPF.Views.ScrobblePreviewView"
+﻿<Window x:Class="Last.fm_Scrubbler_WPF.Views.ScrobbleViews.ScrobblePreviewView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:cal="http://www.caliburnproject.org"
         xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF.Views"
         mc:Ignorable="d"
         Title="Scrobble Preview" Height="300" Width="500">
@@ -76,14 +74,6 @@
       </ListView.View>
     </ListView>
 
-    <Button Grid.Row="5" Grid.Column="2" HorizontalAlignment="Right" Content="OK" Width="50">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="OK">
-            <cal:Parameter Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
-          </cal:ActionMessage>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
+    <Button x:Name="OK" Grid.Row="5" Grid.Column="2" HorizontalAlignment="Right" Content="OK" Width="50"/>
   </Grid>
 </Window>
