--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SelectScrobblesControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SelectScrobblesControl.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
-             d:DesignHeight="30" d:DesignWidth="300">
+             d:DesignHeight="30" d:DesignWidth="300" cal:Bind.Model="{Binding}">
 
   <Grid>
     <Grid.ColumnDefinitions>
@@ -15,19 +14,7 @@
       <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
 
-    <Button Grid.Column="0" Content="Select ALL" IsEnabled="{Binding CanSelectAll}">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="SelectAll"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
-    <Button Grid.Column="2" Content="Select NONE" IsEnabled="{Binding CanSelectNone}">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="SelectNone"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
+    <Button x:Name="SelectAll" Grid.Column="0" Content="Select ALL" IsEnabled="{Binding CanSelectAll}"/>
+    <Button x:Name="SelectNone" Grid.Column="2" Content="Select NONE" IsEnabled="{Binding CanSelectNone}"/>
   </Grid>
 </UserControl>
