--- a/Last.fm-Scrubbler-WPF/Views/SubViews/TrackResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/SubViews/TrackResultView.xaml
@@ -3,11 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF.Views"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" cal:Bind.Model="{Binding}">
 
   <UserControl.Resources>
     <BitmapImage x:Key="noalbumimage_small" UriSource="/Resources/noalbumimage_small.png"/>
@@ -27,13 +26,7 @@
         <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
 
-      <Button Grid.Row="0" Content="Back">
-        <i:Interaction.Triggers>
-          <i:EventTrigger EventName="Click">
-            <cal:ActionMessage MethodName="BackFromTrackResult"/>
-          </i:EventTrigger>
-        </i:Interaction.Triggers>
-      </Button>
+      <Button x:Name="BackFromTrackResult" Grid.Row="0" Content="Back"/>
 
       <local:SelectScrobblesControl Grid.Row="0" Grid.Column="2"/>
     </Grid>
