--- a/Last.fm-Scrubbler-WPF/Views/UserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/UserView.xaml
@@ -3,8 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
         Title="Select user" Height="300" Width="300" Icon="..\scrubbler_64.ico">
 
@@ -54,34 +52,19 @@
     <ListBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" ItemsSource="{Binding AvailableUsers}" DisplayMemberPath="Username" SelectedItem="{Binding SelectedUser}"/>
 
     <StackPanel Grid.Row="5" Grid.Column="5" Orientation="Vertical">
-      <Button Style="{StaticResource UserButtonStyle}">
-        <i:Interaction.Triggers>
-          <i:EventTrigger EventName="Click">
-            <cal:ActionMessage MethodName="AddUser"/>
-          </i:EventTrigger>
-        </i:Interaction.Triggers>
+      <Button x:Name="AddUser" Style="{StaticResource UserButtonStyle}">
         <Image Source="..\Resources\plus.png"/>
         <Button.ToolTip>
           <ToolTip>Add a new user</ToolTip>
         </Button.ToolTip>
       </Button>
-      <Button Style="{StaticResource UserInteractionButtonStyle}">
-        <i:Interaction.Triggers>
-          <i:EventTrigger EventName="Click">
-            <cal:ActionMessage MethodName="RemoveUser"/>
-          </i:EventTrigger>
-        </i:Interaction.Triggers>
+      <Button x:Name="RemoveUser" Style="{StaticResource UserInteractionButtonStyle}">
         <Image Source="..\Resources\minus.png"/>
         <Button.ToolTip>
           <ToolTip>Remove selected user</ToolTip>
         </Button.ToolTip>
       </Button>
-      <Button Style="{StaticResource UserInteractionButtonStyle}">
-        <i:Interaction.Triggers>
-          <i:EventTrigger EventName="Click">
-            <cal:ActionMessage MethodName="LoginUser"/>
-          </i:EventTrigger>
-        </i:Interaction.Triggers>
+      <Button x:Name="LoginUser" Style="{StaticResource UserInteractionButtonStyle}">
         <Image Source="..\Resources\repeat-1.png"/>
         <Button.ToolTip>
           <ToolTip>Switch active user with selected user</ToolTip>
